[gd_scene load_steps=6 format=2]

[ext_resource path="res://sounds/gui/select.wav" type="AudioStream" id=1]
[ext_resource path="res://sounds/gui/pause.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/gui/unpause.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/player/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/scripts/audio.gd" type="Script" id=5]

[node name="Audio" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="SelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="PauseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="UnpauseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
