extends Node2D

onready var select = $SelectSFX
onready var pause = $PauseSFX
onready var unpause = $UnpauseSFX
onready var jump = $JumpSFX
onready var oneup = $"1upSFX"
onready var shoot = $"ShootSFX"
onready var edeath = $EnemyDeathSFX
onready var phit = $PlayerHitSFX
onready var ahit = $AmmoHitSFX
onready var coin = $CoinSFX
onready var rumble = $RumbleSFX
onready var bjump = $BossJumpSFX
onready var bshoot = $BossShootSFX
onready var bland = $BossLandSFX
